Fix color contrast

--- a/app/assets/stylesheets/main_page.scss
+++ b/app/assets/stylesheets/main_page.scss
@@ -37,12 +37,6 @@ body {
      margin: 30px;
   }
   
-  // .main-1-section-2:hover,
-  // .main-2-section-1:hover,
-  // .main-3-section-2:hover {
-  //   color: #fc3903;
-  // }
-  
   .main-2-section-2
   {
     margin-bottom: 10px;
@@ -130,7 +124,6 @@ body {
   }
 
   .page-div-grey {
-    background-color: white;
     color: white;  
     padding: 10px;
     margin: 30px;
@@ -264,7 +257,6 @@ body {
       }
 
       .main-2-section-1 {
-         color: #fc3903;
          box-shadow: .2px .2px 20px white;
          background-size: 100% 100%;
          width:500px;
